Ajout de la homepage qui va permettre de rechercher un projet. Ajout des liens javascript et css dans index.html. Ajout des traductions fr et en pour cette page. Ajout d'image GitHub.

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <!-- CSS global Start -->
+        <link rel="stylesheet" href="css/app.css">
 
         <!-- CSS responsive -->
 
