Ajout de la vue repository qui permet d'afficher les commit et les committers. Ajout d'une nouvelle library javascript qui va permettre de faire des Graphics. Ajout de classe qui permette de faire des Graphics.

--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
         <!-- Javascript pour JQuery -->
         <script src="bower_components/jquery/dist/jquery.js"></script>
 
+        <!-- Javascript pour Chart -->
+        <script type="text/javascript" src="bower_components/Chart.js/Chart.js"></script>
+        <script type="text/javascript" src="js/models/LineGraphic.js"></script>
+        <script type="text/javascript" src="js/models/PolarAreaGraphic.js"></script>
+
         <!-- Javascript pour angularsjs -->
         <script src="bower_components/angular/angular.js"></script>
         <script src="bower_components/angular-animate/angular-animate.js"></script>
@@ -31,6 +36,7 @@
 
         <!-- Javascript pour angularsjs/controllers -->
         <script type="text/javascript" src="js/controllers/HomepageController.js"></script>
+        <script type="text/javascript" src="js/controllers/RepositoryController.js"></script>
         <!-- Javascript pour charger le module controllers -->
         <script type="text/javascript" src="js/controllers/controllers.js"></script>
 
