--- a/index.html
+++ b/index.html
@@ -3,15 +3,14 @@
     <head>
         <meta charset="utf-8" />
         <!-- CSS global Start -->
-        <link rel="stylesheet" href="css/app.css">
-
-        <!-- CSS responsive -->
 
         <!-- CSS de bootstrap -->
         <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">
 
-        <!-- CSS global End -->
+        <!-- CSS responsive -->
 
+        <!-- CSS global End -->
+         <link rel="stylesheet" href="css/app.css">
         <!-- Javascript global Start -->
 
         <!-- Javascript pour JQuery -->
@@ -19,11 +18,10 @@
 
         <!-- Javascript pour Chart -->
         <script type="text/javascript" src="bower_components/Chart.js/Chart.js"></script>
-        <script type="text/javascript" src="js/models/LineGraphic.js"></script>
-        <script type="text/javascript" src="js/models/PolarAreaGraphic.js"></script>
 
         <!-- Javascript pour angularsjs -->
         <script src="bower_components/angular/angular.js"></script>
+        <script src="bower_components/angular-cookies/angular-cookies.js"></script>
         <script src="bower_components/angular-animate/angular-animate.js"></script>
         <script src="bower_components/angular-route/angular-route.js"></script>
         <script src="bower_components/angular-resource/angular-resource.js"></script>
@@ -32,11 +30,14 @@
         
         <!-- Javascript pour angularsjs/services -->
         <!-- Javascript pour charger le module services -->
+        <script type="text/javascript" src="js/services/graphicServices.js"></script>
+        <script type="text/javascript" src="js/services/GitHubAPIService.js"></script>
         <script type="text/javascript" src="js/services/services.js"></script>
 
         <!-- Javascript pour angularsjs/controllers -->
         <script type="text/javascript" src="js/controllers/HomepageController.js"></script>
-        <script type="text/javascript" src="js/controllers/RepositoryController.js"></script>
+        <script type="text/javascript" src="js/controllers/RepositoryCommitterController.js"></script>
+        <script type="text/javascript" src="js/controllers/RepositoryCommitController.js"></script>
         <!-- Javascript pour charger le module controllers -->
         <script type="text/javascript" src="js/controllers/controllers.js"></script>
 
