--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
         <!-- Javascript pour Chart -->
         <script type="text/javascript" src="bower_components/Chart.js/Chart.js"></script>
 
+        <!-- Javascript pour Bootstrap -->
+        <script type="text/javascript" src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
+
         <!-- Javascript pour angularsjs -->
         <script src="bower_components/angular/angular.js"></script>
         <script src="bower_components/angular-cookies/angular-cookies.js"></script>
